# AnotherOSbutinrust

./: .gitignore  Cargo.toml  Dockerfile  build.md  build.rs  linuxDocker.sh  readme.md  stage2.sh  stop.sh
.github/workflows/: autoCI.yml  dockerBuild.yml  dockerPublish.yml  rustBuildCI.yml
kernel/: Cargo.toml
kernel/src/: framebuffer.rs  gdt.rs  interrupts.rs  main.rs
