[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = "0.11.7"
x86_64 = "0.15.1"
spin = "0.9.8"
pic8259 = "0.11.0"

[dependencies.lazy_static]
version = "1.4.0"
features = [ "spin_no_std" ]

[dependencies.noto-sans-mono-bitmap]
version = "0.2.0"
default-features = false
features = [
  "regular",
  "size_16",
  "unicode-basic-latin",
  "unicode-specials",
]
